# social-media-voiceover

./: .gitignore  .pre-commit-config.yaml  README.md  number_converter.py  project.toml  pyproject.toml  requirements.txt  voiceover.py
.ipynb_checkpoints/: Makefile-checkpoint  voiceover-checkpoint.py
